<resources>
    <string name="app_name">BF3 Droid</string>
    <string name="widget_name">Battlelog - Stats+Friends</string>
    <string-array name="service_update_intervals_labels">
        <item>@string/label_update_interval_minutes_5</item>
        <item>@string/label_update_interval_minutes_10</item>
        <item>@string/label_update_interval_minutes_30</item>
        <item>@string/label_update_interval_hours_1</item>
        <item>@string/label_update_interval_hours_2</item>
        <item>@string/label_update_interval_hours_6</item>
        <item>@string/label_update_interval_hours_12</item>
        <item>@string/label_update_interval_hours_18</item>
        <item>@string/label_update_interval_days_1</item>
    </string-array>
    <string-array name="chat_update_intervals_labels">
        <item>@string/label_update_interval_seconds_5</item>
        <item>@string/label_update_interval_seconds_10</item>
        <item>@string/label_update_interval_seconds_15</item>
        <item>@string/label_update_interval_seconds_20</item>
        <item>@string/label_update_interval_seconds_25</item>
        <item>@string/label_update_interval_seconds_30</item>
        <item>@string/label_update_interval_minutes_1</item>
        <item>@string/label_update_interval_seconds_90</item>
        <item>@string/label_update_interval_minutes_2</item>
    </string-array>
    <string-array name="language_titles">
        <item>Česky</item>
        <item>Cрпски</item>
        <item>Dansk</item>
        <item>Deutsch</item>
        <item>English</item>
        <item>Español</item>
        <item>Francais</item>
        <item>Hrvatski</item>
        <item>Italiano</item>
        <item>Nederlands</item>
        <item>Polski</item>
        <item>Português</item>
        <item>Român</item>
        <item>Suomi</item>
        <item>Svenska</item>
    </string-array>
    <string-array name="language_values">
        <item>cs</item>
        <item>sr</item>
        <item>da</item>
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>hr</item>
        <item>it</item>
        <item>nl</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>fi</item>
        <item>sv</item>
    </string-array>
    <string name="changelog">To be determined... - @karllindmark</string>
    <string name="notice_text">&lt;b>This app is NOT created nor endorsed by EA/DICE! &lt;/b>&lt;br />This is a third-party app developed by the Open Source Community.&lt;p>In order to use this application you will need to login using your Origin™ credentials, and the credentials will only be used in the login process you are about to undertake. We will &lt;b>NEVER &lt;/b> store or share your credentials in any way.&lt;p>By clicking on the checkbox below, you confirm that you have read this notice, and want to proceed with the login.&lt;/p></string>
    <string name="agree_text">I have read the notice and want to login</string>
    <string name="general_invalid_email">Invalid e-mail address.</string>
    <string name="general_invalid_password">Please enter your password.</string>
    <string name="general_changelog_version">Changelog version {version}</string>
    <string name="general_wait">Please wait</string>
    <string name="general_downloading">Downloading the data...</string>
    <string name="general_no_data">No data found.</string>
    <string name="label_own_soldiernu">Menu</string>
    <string name="label_feed">Feed</string>
    <string name="label_friends">Friends</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_own_soldier">My soldier</string>
    <string name="label_unlocks">My unlocks</string>
    <string name="label_find_soldier">Find soldier</string>
    <string name="label_find_platoon">Find platoon</string>
    <string name="label_compare_bs">Compare battle scars</string>
    <string name="label_settings">Settings</string>
    <string name="status_empty_input">Please enter a status text to continue.</string>
    <string name="status_error_unknown">An error has occured: please relogin and try again.</string>
    <string name="general_empty_user">You need to enter a username</string>
    <string name="info_profile_soldier">View soldier profile of...</string>
    <string name="info_profile_platoon">View the platoon profile for...</string>
    <string name="general_empty_name">You need to enter a name</string>
    <string name="label_chat_open">Open chat</string>
    <string name="label_soldier_view">View soldier</string>
    <string name="label_hooah">Hooah!</string>
    <string name="label_unhooah">Un-hooah!</string>
    <string name="label_comment_view">View comments</string>
    <string name="msg_unimplemented">Unimplemented functionality.</string>
    <string name="info_feed_empty">No feed items found.</string>
    <string name="label_wait">Please wait...</string>
    <string name="label_com_handle">COM CENTER ({num} ONLINE)</string>
    <string name="lable_refresh">Refresh now</string>
    <string name="label_home">Home</string>
    <string name="label_stats">Stats</string>
    <string name="label_users">Users</string>
    <string name="info_platoon_created">Created on {DATE} ({RELATIVE DATE})</string>
    <string name="label_members">MEMBERS</string>
    <string name="label_fans">FANS</string>
    <string name="info_platoon_compare">You can\'t compare platoons... (yet?)</string>
    <string name="info_empty_msg">You\'re not allowed to post an empty message.</string>
    <string name="info_profile_online">Online but not currently playing</string>
    <string name="info_profile_playing">Playing on {server name}</string>
    <string name="info_profile_empty_pres">No presentation found.</string>
    <string name="info_hooah_s">{num} hooah</string>
    <string name="info_hooah_p">{num} hooahs</string>
    <string name="info_comment_s">{num} comment</string>
    <string name="info_comment_p">{num} comments</string>
    <string name="label_playing">Playing</string>
    <string name="label_online">Online</string>
    <string name="label_offline">Offline</string>
    <string name="msg_chat_norefresh">Chat could not be refreshed.</string>
    <string name="label_sending">Sending...</string>
    <string name="label_send">Send</string>
    <string name="msg_chat_ok">Message sent!</string>
    <string name="msg_chat_fail">Message could not be sent!</string>
    <string name="msg_comment_ok">Comment posted!</string>
    <string name="msg_comment_fail">Comment could not be posted!</string>
    <string name="msg_comment_norefresh">Comments could not be refreshed.</string>
    <string name="msg_com_ok">COM CENTER up to date.</string>
    <string name="msg_com_fail">COM CENTER could not be refreshed.</string>
    <string name="msg_hooah_fail">Hooah failed!</string>
    <string name="msg_search_nouser">No user found matching the following keyword: {keyword}</string>
    <string name="msg_search_noplatoon">No platoon found matching the following keyword: {keyword}</string>
    <string name="msg_frequest_ok">Friend request sent!</string>
    <string name="msg_frequest_fail">Friend request could not be sent.</string>
    <string name="msg_logging_in">Logging in...</string>
    <string name="msg_login_fail">Login failed.</string>
    <string name="msg_logout">Logging out...</string>
    <string name="msg_error">An error has occured.</string>
    <string name="msg_prequest_ok">You applied for the platoon.</string>
    <string name="msg_prequest_fail_pres">You could not apply due to platform restrictions.</string>
    <string name="msg_prequest_fail_full">You could not apply due to the platoon being full.</string>
    <string name="msg_prequest_fail_error">An error occured while applying for the platoon.</string>
    <string name="msg_platoon_left">You left the platoon.</string>
    <string name="info_xml_no_feed">No items found in the feed</string>
    <string name="info_xml_hint_feed">Write in feed</string>
    <string name="info_xml_back">Back</string>
    <string name="info_xml_reload">Reload</string>
    <string name="info_xml_logout">Logout</string>
    <string name="info_xml_apply">Apply to join</string>
    <string name="info_xml_fan">Become a fan</string>
    <string name="info_xml_leave_platoon">Leave platoon</string>
    <string name="info_xml_members">Members</string>
    <string name="info_xml_un_fan">Un-fan</string>
    <string name="info_xml_fans">Fans</string>
    <string name="info_xml_compare">Compare</string>
    <string name="info_xml_compare_bs">Compare scars</string>
    <string name="info_xml_add_friend">Add friend</string>
    <string name="info_xml_remove_friend">Remove friend</string>
    <string name="info_hint_email">Origin™ Account E-mail</string>
    <string name="info_hint_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_save">Save password</string>
    <string name="label_forum">Forum</string>
    <string name="label_search">Search</string>
    <string name="label_own_platoon">My platoons</string>
    <string name="label_assignments">My assignments</string>
    <string name="info_xml_invite">Invite...</string>
    <string name="label_option_about">About...</string>
    <string name="label_option_search">Search...</string>
    <string name="info_option_unlocks">View unlocks</string>
    <string name="info_forum_report_reason">Why do you want to report this post?</string>
    <string name="info_forum_report_label">Report a post</string>
    <string name="label_report">Report</string>
    <string name="label_post">Post</string>
    <string name="label_app_settings">Application settings</string>
    <string name="profile_info_birthday_msg">Selecting birthday will make it VISIBLE on your profile. Leave it as today or
    date in future will HIDE this information from your profile.
</string>
    <string name="birthday">Birthday</string>
    <string name="country">Country</string>
    <string name="profile_info_country">Please enter country name.</string>
    <string name="date_format">Date format</string>
    <string name="time_format">Time format</string>
    <string name="local_time">Your local time</string>
    <string name="msg_faq_how_contact">How can I contact you?</string>
    <string name="msg_faq_how_contact_answer">You can use various platforms to reach me, most of them listed in the first tab to the left. Use whichever you feel most comfortable with, and I\'ll respond as soon as possible. :-)</string>
    <string name="msg_faq_how_translate">My language is all messed up - can I help?</string>
    <string name="msg_faq_how_translate_answer">Yes you can! Head over to http://bit.ly/bf3bll8n for more information on how you can help out with translating the app!</string>
    <string name="msg_faq_how_app_works">How does this app work?</string>
    <string name="msg_faq_how_app_works_answer">This app establishes a direct connection to the actual Battlelog servers and logs in using your Origin-account. If you\'re interested in viewing the actual source, it\'s viewable on github via the following link: http://bit.ly/bf3blsrc</string>
    <string name="msg_faq_is_app_safe">But... is it safe?</string>
    <string name="msg_faq_is_app_safe_answer">As the workflow of login process is identical to logging in using a regular web browser, one could say that it\'s as safe as your current network connection is.</string>
    <string name="msg_faq_is_not_stealing_password">Are you sure that you aren\'t stealing our passwords?</string>
    <string name="msg_faq_is_not_stealing_password_answer">Yes, I\'m 100% certain of that.\n\nThe only time that the app is sending your Origin credentials anywhere is when you login manually.\n\nIn other words, your login information never gets sent to any third-party servers or similar.</string>
</resources>