<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/option_reload"
        android:alphabeticShortcut="R"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/info_xml_reload"/>
    <item
        android:id="@+id/option_join"
        android:alphabeticShortcut="F"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/info_xml_apply"
        android:visible="false"/>
    <item
        android:id="@+id/option_fan_yes"
        android:alphabeticShortcut="F"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/info_xml_fan"
        android:visible="false"/>
    <item
        android:id="@+id/option_leave"
        android:alphabeticShortcut="F"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/info_xml_leave_platoon"
        android:visible="false"/>
    <item
        android:id="@+id/option_fan_no"
        android:alphabeticShortcut="F"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/info_xml_un_fan"
        android:visible="false"/>
    <item
        android:id="@+id/option_members"
        android:alphabeticShortcut="U"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/info_xml_members"
        android:visible="false"/>
    <item
        android:id="@+id/option_fans"
        android:alphabeticShortcut="U"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/info_xml_fans"
        android:visible="false"/>
    <item
        android:id="@+id/option_invite"
        android:alphabeticShortcut="I"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/info_xml_invite"
        android:visible="false"/>
    <item
        android:id="@+id/option_compare"
        android:alphabeticShortcut="C"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/info_xml_compare"
        android:visible="false"/>
    <item
        android:id="@+id/option_back"
        android:alphabeticShortcut="B"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/info_xml_back"/>

</menu>