<?xml version="1.0" encoding="utf-8"?>
<!--
	This file is part of BF3 Battlelog

    BF3 Battlelog is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BF3 Battlelog is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical">

    <TextView
        style="@style/FriendHeadingRow"
        android:text="@string/msg_faq_how_contact"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/msg_faq_how_contact_answer"/>
    <TextView
        style="@style/FriendHeadingRow"
        android:text="@string/msg_faq_how_translate"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/msg_faq_how_translate_answer"/>
    
    <TextView
        style="@style/FriendHeadingRow"
        android:text="@string/msg_faq_how_app_works"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/msg_faq_how_app_works_answer"/>

    <TextView
        style="@style/FriendHeadingRow"
        android:text="@string/msg_faq_is_app_safe"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/msg_faq_is_app_safe_answer"/>

    <TextView
        style="@style/FriendHeadingRow"
        android:text="@string/msg_faq_is_not_stealing_password"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/msg_faq_is_not_stealing_password_answer"/>
  </LinearLayout>

</ScrollView>