<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/option_reload"
        android:alphabeticShortcut="R"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/info_xml_reload"/>
    <item
        android:id="@+id/option_friendadd"
        android:alphabeticShortcut="F"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/info_xml_add_friend"
        android:visible="false"/>
    <item
        android:id="@+id/option_frienddel"
        android:alphabeticShortcut="F"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/info_xml_remove_friend"
        android:visible="false"/>
    <item
        android:id="@+id/option_compare"
        android:alphabeticShortcut="C"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/info_xml_compare_bs"
        android:visible="false"/>
    <item
        android:id="@+id/option_unlocks"
        android:alphabeticShortcut="U"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/info_option_unlocks"
        android:visible="false"/>
    <item
        android:id="@+id/option_back"
        android:alphabeticShortcut="B"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/info_xml_back"/>

</menu>