<?xml version="1.0" encoding="utf-8"?>
<!--  
	This file is part of BF3 Battlelog

    BF3 Battlelog is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BF3 Battlelog is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@drawable/bg_bf3_main"
	android:padding="10dp"
>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:gravity="center"
	>
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:gravity="center"
		>
			<Button
			    style="@style/MenuButton"
			    android:id="@+id/button_self"
			    android:text="@string/label_own_soldier"
			/>
			<Button
			    style="@style/MenuButton"
			    android:id="@+id/button_platoons"
			    android:text="@string/label_own_platoon"
			/>
			<Button
			    style="@style/MenuButton"
			    android:id="@+id/button_assignments"
			    android:text="@string/label_assignments"
			/>
			<Button
			    style="@style/MenuButton"
			    android:id="@+id/button_unlocks"
			    android:text="@string/label_unlocks"
			/>
			<Button
			    style="@style/MenuButton"
			    android:id="@+id/button_compare"
			    android:text="@string/label_compare_bs"
			/>
			<Button
			    style="@style/MenuButton"
			    android:id="@+id/button_search"
			    android:text="@string/label_search"
			/>
			<Button
			    style="@style/MenuButton"
			    android:id="@+id/button_forum"
			    android:text="@string/label_forum"
			/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>