<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_bf3_main"
>
	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	>
		<EditText
		    android:id="@+id/field_email"
		    android:minWidth="250dp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:hint="@string/info_hint_email"
		    android:inputType="textEmailAddress"
		    android:layout_marginBottom="5dp"
		    android:layout_centerHorizontal="true"
		/>
		<EditText
		    android:id="@+id/field_password"
		    android:minWidth="250dp"
		    android:layout_width="250dp"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/field_email"
		    android:hint="@string/info_hint_password"
		    android:inputType="textPassword"
		    android:layout_marginBottom="5dp"
		    android:layout_centerHorizontal="true"
		/>	    
		<CheckBox
		    android:id="@+id/checkbox_save"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/label_save"
			android:textColor="#FFFFFF"	
			android:layout_below="@id/field_password"
			android:layout_centerHorizontal="true"	
		/>
		<Button
		    style="@style/RegularButton"
		    android:layout_width="125dp"
		    android:id="@+id/button_login"
			android:text="@string/label_login"
			android:layout_below="@id/checkbox_save"			
			android:layout_centerHorizontal="true"
		/>
	</RelativeLayout>
</RelativeLayout>