<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        >

  <PreferenceCategory android:title="General settings">
    <EditTextPreference
        android:hint="user@example.com"
        android:key="profile_general_gravatar"
        android:title="Gravatar e-mail"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="Soldier settings">
    <EditTextPreference
        android:hint="ABCD"
        android:key="profile_soldier_clantag"
        android:title="Clan tag"/>
    <!-- Dropdown with different "soldier images" here -->
    <!-- Dogtag dropdown here? -->
  </PreferenceCategory>
  <PreferenceCategory android:title="Profile information">
    <EditTextPreference
        android:dialogMessage="What&apos;s your name?"
        android:hint="John Doe"
        android:key="profile_info_name"
        android:title="Name"/>
    <EditTextPreference
        android:dialogMessage="Here&apos;s where you can let the other users know a thing or two about yourself."
        android:hint="Hello world!"
        android:key="profile_info_presentation"
        android:title="Presentation"/>

    <com.ninetwozero.battlelog.preference.DatePickerPreference
        android:dialogMessage="@string/profile_info_birthday_msg"
        android:title="@string/birthday"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="Demographic information">
    <com.ninetwozero.battlelog.preference.CountryPreference
        android:dialogMessage="@string/profile_info_country"
        android:title="@string/country"/>

    <com.ninetwozero.battlelog.preference.DateTimePreference
        android:key="profile_info_date_format"
        android:title="@string/date_format"/>
    <com.ninetwozero.battlelog.preference.DateTimePreference
        android:key="profile_info_time_format"
        android:title="@string/time_format"/>

    <com.ninetwozero.battlelog.preference.LocalTimeListPreference
        android:key="profile_info_local_time"
        android:title="@string/local_time"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="Privacy settings">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="profile_privacy_info"
        android:summaryOff="Your personal info is not visible for everyone."
        android:summaryOn="Your personal info is visible for anyone to view."
        android:title="Show personal info on profile"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="profile_privacy_post"
        android:summaryOff="Your game events and activity will NOT be posted to your Battle feed."
        android:summaryOn="Your game events and activity will be posted to your Battle feed."
        android:title="Share game activity"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="profile_privacy_friends"
        android:summaryOff="Other players will be unable to send you friend requests."
        android:summaryOn="Other players will be able to send you friend requests."
        android:title="Allow friend requests"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="Sound notifications (web)">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="profile_sound_chat"
        android:summaryOff="You will not be notified of new chat messages."
        android:summaryOn="You will be notified of new chat messages."
        android:title="Mute chat notification"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="profile_sound_notification"
        android:summaryOff="You will not be notified of new events."
        android:summaryOn="You will be notified of new events."
        android:title="Mute event notification"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="profile_sound_br"
        android:summaryOff="You will not be notified of new Battle reports."
        android:summaryOn="You will be notified of new Battle reports."
        android:title="Mute battle report notification"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="profile_sound_friend"
        android:summaryOff="You will not be notified of new friend requests."
        android:summaryOn="You will be notified of new friend requests."
        android:title="Mute friend request notification"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="profile_sound_game"
        android:summaryOff="You will not be notified when the game is ready."
        android:summaryOn="You will be notified when the game is ready."
        android:title="Mute game notification"/>
  </PreferenceCategory>

</PreferenceScreen>