<?xml version="1.0" encoding="utf-8"?>
<!--  
	This file is part of BF3 Battlelog

    BF3 Battlelog is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BF3 Battlelog is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:padding="10dp"
>   
	<TextView 
	    style="@style/InfoHeading"
	    android:id="@+id/text_title"
		android:layout_alignParentTop="true"
		android:text="@string/info_forum_report_label"
		android:padding="5dp"
		android:layout_marginTop="0dp"
		android:layout_marginBottom="0dp"

	/>
	<Button 
	    style="@style/RegularButton"
		android:id="@+id/button_report"    
	    android:layout_width="fill_parent"
		android:text="@string/label_report"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:onClick="onClick"
	/>
	<EditText
	    android:id="@+id/field_reason"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:hint="@string/info_forum_report_reason"
		android:layout_below="@id/text_title"
		android:layout_above="@id/button_report"
		android:gravity="top|left"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
	/>
</RelativeLayout>