<?xml version="1.0" encoding="utf-8"?>
<!--  
	This file is part of BF3 Battlelog

    BF3 Battlelog is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BF3 Battlelog is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
 -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
	android:paddingTop="5dp"
	android:paddingLeft="10dp"
	android:paddingRight="10dp"
>		
	
	<TextView 
	    style="@style/InfoHeading"
	    android:id="@+id/feed_username"
	    android:text="NINETWOZERO"
		android:padding="5dp"
	/>
	<RelativeLayout
	    android:id="@+id/feed_update"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="10dp"
	    android:layout_below="@id/feed_username"
	    android:visibility="gone"
	>  
		<Button
		    style="@style/RegularButton"
		    android:id="@+id/button_send"
		    android:text="@string/label_post"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		/>
		<EditText
		  	android:id="@+id/field_message"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:hint="@string/info_xml_hint_feed"
		  	android:layout_toLeftOf="@id/button_send"
		    android:layout_marginRight="6dp"
		    android:layout_centerVertical="true"
		    android:singleLine="true"
		 />
	</RelativeLayout>
   	<ListView
	    android:id="@+id/list_feed"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:layout_below="@id/feed_update"
		android:paddingBottom="5dp"
		android:fastScrollEnabled="true"
	/>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	>
		<TextView
		  	android:id="@+id/status_feed"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:text="@string/info_xml_no_feed"	
		    android:layout_centerInParent="true"
		    android:visibility="gone"
		/>
	</RelativeLayout>
</RelativeLayout>